# bruno-mcp

./: .gitignore  README.md  TESTS_READY_FOR_REVIEW.md  TESTS_REFACTORED.md  TEST_SUMMARY.md  pyproject.toml
.cursor/commands/: implement-code.md  plan-code.md  plan-test.md
src/bruno_mcp/: __init__.py  resolver.py  server.py
src/bruno_mcp/executors/: __init__.py  cli_executor.py
src/bruno_mcp/models/: __init__.py  bru_environment.py
src/bruno_mcp/parsers/: __init__.py  base_parser.py  bru_parser.py  env_parser.py
tests/: conftest.py  test_resolver.py
tests/executors/: test_cli_executor.py
tests/fixtures/invalid/: malformed-braces.bru  missing-method.bru
tests/fixtures/sample_collection/: bruno.json
tests/fixtures/sample_collection/environments/: local.bru  production.bru
tests/fixtures/sample_collection/posts/: create-post.bru  form-data.bru  form-upload.bru  list-posts.bru
tests/fixtures/sample_collection/users/: create-user.bru  delete-user.bru  get-user.bru  update-user.bru
tests/parsers/: test_env_parser.py
tests/server/: test_mcp_server.py
